-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7
-
None
-
Arch Linux, clang 3.8.0 (from trunk)
Trying to build QtWayland with clang on Linux I get the following error messages:
/home/code/autobuild/qt5-dev/qtwayland/src/compositor/global/qwaylandextension.h:120:11: error: no matching constructor for initialization of 'QWaylandExtension'
: QWaylandExtension(dd)
^ ~~
/home/code/autobuild/qt5-dev/qtwayland/src/compositor/global/qwaylandextension.h:70:46: note: candidate constructor (the implicit copy constructor) not viable: cannot convert argument of incomplete type 'QWaylandExtensionTemplatePrivate' to 'const QWaylandExtension'
class _attribute_((visibility("default"))) QWaylandExtension : public QWaylandObject
^
/home/code/autobuild/qt5-dev/qtwayland/src/compositor/global/qwaylandextension.h:76:5: note: candidate constructor not viable: cannot convert argument of incomplete type 'QWaylandExtensionTemplatePrivate' to 'QWaylandObject *'
QWaylandExtension(QWaylandObject *container);
^
/home/code/autobuild/qt5-dev/qtwayland/src/compositor/global/qwaylandextension.h:88:5: note: candidate constructor not viable: cannot convert argument of incomplete type 'QWaylandExtensionTemplatePrivate' to 'QWaylandExtensionPrivate &'
QWaylandExtension(QWaylandExtensionPrivate &dd);
^
/home/code/autobuild/qt5-dev/qtwayland/src/compositor/global/qwaylandextension.h:75:5: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
QWaylandExtension();
^
/home/code/autobuild/qt5-dev/qtwayland/src/compositor/global/qwaylandextension.h:89:5: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
QWaylandExtension(QWaylandObject *container, QWaylandExtensionPrivate &dd);
^
/home/code/autobuild/qt5-dev/qtwayland/src/compositor/global/qwaylandextension.h:124:11: error: no matching constructor for initialization of 'QWaylandExtension'
: QWaylandExtension(container,dd)
^ ~~~~~~~~~~~~
/home/code/autobuild/qt5-dev/qtwayland/src/compositor/global/qwaylandextension.h:89:5: note: candidate constructor not viable: cannot convert argument of incomplete type 'QWaylandExtensionTemplatePrivate' to 'QWaylandExtensionPrivate &'
QWaylandExtension(QWaylandObject *container, QWaylandExtensionPrivate &dd);
^
/home/code/autobuild/qt5-dev/qtwayland/src/compositor/global/qwaylandextension.h:76:5: note: candidate constructor not viable: requires single argument 'container', but 2 arguments were provided
QWaylandExtension(QWaylandObject *container);
^
/home/code/autobuild/qt5-dev/qtwayland/src/compositor/global/qwaylandextension.h:88:5: note: candidate constructor not viable: requires single argument 'dd', but 2 arguments were provided
QWaylandExtension(QWaylandExtensionPrivate &dd);
^
/home/code/autobuild/qt5-dev/qtwayland/src/compositor/global/qwaylandextension.h:70:46: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 2 were provided
class _attribute_((visibility("default"))) QWaylandExtension : public QWaylandObject
^
/home/code/autobuild/qt5-dev/qtwayland/src/compositor/global/qwaylandextension.h:75:5: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
QWaylandExtension();
^
2 errors generated.