Change constructor argument types for QWaylandExtensionTemplate

The constructor was using the incomplete type
QWaylandExtensionTemplatePrivate, when in fact only
QWaylandExtensionPrivate was needed.

This was causing compilation issues with clang.

Task-number: QTBUG-50265
Change-Id: Ie6ae6ac5aa6bc9f3cc63be181e44071ac9382b94
Reviewed-by: Pier Luigi Fiorini <pierluigi.fiorini@gmail.com>